fix: re-adjusted spacing on desktop

--- a/challenges/week-5/style.css
+++ b/challenges/week-5/style.css
@@ -4,37 +4,38 @@ body{
 
 .responsive-box{
     display: flex;
-    margin: 10% 1% 0 7.5%;
+    margin: 10% 1% 0 7%;
+    gap: 1rem;
 }
 
 .text-box{
     display: flex;
     flex-direction: column;
     order: 0;
-    padding-right: 1rem;
-    width: 30%;
+    width: 25%;
 }
 
 /* font desktop size: 3.3% of height */
 .header{
-    font-size: 64px;
+    font-size: 61px;
+    font-weight: 700;
     line-height: 115%;
     letter-spacing: 0.02em;
-    margin-right: 1.5rem;
+    margin: 24px 0;
 }
 
 /* font desktop size: 1.1% of height */
 .paragraph{
-    font-size: 22px;
+    font-size: 24px;
+    font-weight: 400;
     line-height: 169%;
     letter-spacing: 0.04em;
-    margin-right: 1.5rem
 }
 
 .photo-box{
     display: flex;
     order: 1;
-    width: 70%;
+    width: 75%;
 }
 
 .image-and-overlay{
